src/styles/partials/_search.scss
.search {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: auto;
}

.search-- {
  &bar {
    display: flex;
    flex-direction: row;
    height: 2.560625rem;
    width: auto;
    box-sizing: border-box;

    &-input {
      height: 100%;
      width: 75%;
      padding-left: 1rem;
      background: $white;
      border-radius: 0.125rem;
      border: $white;

      &_holder {
        @include font;
        height: auto;
        width: 100%;
        margin-top: 0.5rem;
        border: $white;
        outline: none;
      }
    }

    &-icon {
      width: 2.560625rem;
      height: 100%;
      background: $secondary;
      border: $secondary;
      border-radius: 0.125rem;
    }
  }

  &bar_home {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 97.6%;
    height: 3rem;
    font-size: 1rem;
    line-height: 3rem;
    outline: none;
    background: $white;
    padding-left: 1rem;
    border: white;
    border-radius: 0.25rem;
    box-sizing: border-box;
  }

  &bar {
    &-input_home {
      height: 100%;
      width: 75%;
      padding-left: 1rem;
      background: $white;
      border-radius: 0.125rem;
      border: $white;
    }

    &-input_holder_home {
      @include font;
      height: auto;
      width: 100%;
      margin-top: 0.5rem;
      border: $white;
      outline: none;
    }

    &-icon_home {
      width: 3.09375rem;
      height: 100%;
      background: $white;
      border: white;
      border-radius: 0.25rem;
    }
  }

  &container {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-width: 600px;
    height: 22.875rem;
    background: $white;
    box-shadow: 0.0625rem 0.0625rem 0.25rem rgba($black, 0.15);
    z-index: 1;
    overflow-y: auto;
    text-align: start;
  }

  &file {
    @include font;
    width: 100%;
    height: 1.625rem;
    left: 0%;
    background: rgba($primary, 0.275);
    font-size: 0.875rem;
    line-height: 1.5625rem;
    color: $secondary;
    text-align: center;
    &-holder {
      width: 96%;
      padding-left: 2%;
      padding-right: 2%;
      display: grid;
      grid-template-rows: auto;
      grid-template-columns: 33% 33% 33%;
    }
    &-seeall {
      @include font;
      width: 2.625rem;
      height: 1.0625rem;
      margin-left: 87.69%;
      margin-bottom: 1rem;
      margin-top: 1rem;
      font-size: 0.875rem;
      line-height: 1rem;
      color: $primary;
    }
    &-seeall:hover {
      text-decoration: underline;
      cursor: pointer;
    }
    &-noresults {
      display: flex;
      flex-direction: row;
      padding-right: 1rem;
      margin-bottom: 1rem;
      margin-top: 1rem;
      margin-left: 1rem;
      &_icon {
        width: 1.5rem;
        height: 1.5rem;
      }
      &_text,
      &_requestfile {
        @include font;
      }
      &_requestfile {
        color: $primary;
      }
      &_requestfile:hover {
        text-decoration: underline;
        cursor: pointer;
      }
      &-outer {
        margin-left: 1%;
      }
    }
  }

  &courses {
    @include font;
    width: 100%;
    height: 1.625rem;
    background: rgba($primary, 0.275);
    font-size: 0.875rem;
    line-height: 1.5625rem;
    color: $secondary;
    text-align: center;
    &-name {
      @include font;
      font-size: 0.875rem;
      line-height: 1rem;
      color: $font-color;
      padding: 0.75rem 1.5rem 0.75rem;
      border-bottom: 0.0625rem solid $border;
    }
    &-name:hover {
      cursor: pointer;
    }
    &-noresults {
      display: flex;
      flex-direction: row;
      padding-right: 1rem;
      margin-bottom: 1rem;
      margin-top: 1rem;
      margin-left: 1rem;
      &_icon {
        width: 1.5rem;
        height: 1.5rem;
        margin-right: 0.225rem;
      }
      &_text,
      &_requestcourse {
        @include font;
      }
      &_requestcourse {
        color: $primary;
      }
      &_requestcourse:hover {
        text-decoration: underline;
        cursor: pointer;
      }
      &-outer {
        margin-left: 1%;
      }
    }
  }

  &department {
    @include font;
    width: 100%;
    height: 1.625rem;
    background: rgba($primary, 0.275);
    font-size: 0.875rem;
    line-height: 1.5625rem;
    color: $secondary;
    text-align: center;
    &-name {
      @include font;
      font-size: 0.875rem;
      line-height: 1rem;
      color: $font-color;
      padding: 0.75rem 1.5rem 0.75rem;
      border-bottom: 0.0625rem solid $border;
    }
    &-name:hover {
      cursor: pointer;
    }
    &-noresults {
      display: flex;
      flex-direction: row;
      padding-right: 1rem;
      margin-bottom: 1rem;
      margin-top: 1rem;
      margin-left: 1rem;
      &_icon {
        width: 1.5rem;
        height: 1.5rem;
      }
      &_text {
        margin-left: 1%;
        font-family: $font;
        font-style: normal;
        font-weight: normal;
        font-size: 1rem;
        line-height: 1.1875rem;
        color: $font-color;
      }
    }
  }
}

